# win-debloater

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  PLAN.md  README.md  app.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  runlog.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: __init__.py  actionlog.py  applog.py  appx.py  diagnostics.py  dryrun.py  elevation.py  paths.py  powershell.py  presets.py  processes.py  profile.py  programs.py  restore.py  scheduled_tasks.py  services.py  support.py  suspicious.py  updates.py
app/core/data/: bloatware.json  presets.json
app/resources/: style.qss
app/ui/: __init__.py  bloatware_tab.py  logs_tab.py  main_window.py  models.py  processes_tab.py  programs_tab.py  services_tab.py  tasks_tab.py  theme.py  widgets.py  workers.py
tests/: conftest.py  test_actionlog.py  test_actionlog_undo.py  test_applog.py  test_appx.py  test_diagnostics.py  test_dryrun.py  test_elevation.py  test_main_window.py  test_models.py  test_paths.py  test_powershell.py  test_presets.py  test_processes.py  test_profile.py  test_programs.py  test_scheduled_tasks.py  test_services.py  test_support.py  test_suspicious.py  test_theme.py  test_updates.py  test_workers.py
tools/: screenshots.py
tools/winget/: README.md  WinDebloater.WinDebloater.installer.yaml  WinDebloater.WinDebloater.locale.en-US.yaml  WinDebloater.WinDebloater.yaml
