[project]
name = "win-debloater"
version = "1.0.0"
description = "A PySide6 desktop tool to remove Windows bloatware and control services, scheduled tasks, and processes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "PySide6>=6.6,<6.10",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
win-debloater = "app.main:main"

# --------------------------------------------------------------------------
# Ruff (lint + format)
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
# Conservative, high-signal rule set. E501 (line length) is disabled so the
# existing layout isn't churned; correctness rules (F, B) are the priority.
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line too long — handled case-by-case, not enforced
    "E741",   # ambiguous variable name (l/O/I) — a few short locals use it
    "B008",   # function call in argument defaults — Qt patterns
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "E712", "F841", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# --------------------------------------------------------------------------
# mypy (type checking — app/core first, lenient elsewhere)
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = false
exclude = ["build/", "dist/", "tests/"]

[[tool.mypy.overrides]]
module = "app.ui.*"
# The Qt-heavy UI layer is checked loosely for now.
ignore_errors = true

# --------------------------------------------------------------------------
# pytest / coverage
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "app/__init__.py"]
